--- a/monitor/config/prometheus-docker.yaml
+++ b/monitor/config/prometheus-docker.yaml
@@ -5,6 +5,11 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['prometheus:9090']
+
   - job_name: 'mysqld_exporter'
     static_configs:
       - targets: [ 'mysqld_exporter:9104' ]
+
+  - job_name: 'redis'
+    static_configs:
+      - targets: [ 'redis_exporter:9121' ]
