--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -153,6 +153,22 @@ services:
       - backend-deploy
     restart: unless-stopped
 
+  consul_exporter:
+    image: prom/consul-exporter:latest
+    container_name: consul_exporter
+    ports:
+      - "9107:9107" # default port for Consul Exporter
+    environment:
+      - CONSUL_URI=http://consul:8500
+    depends_on:
+      - consul
+    networks:
+      - backend-deploy
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://consul_exporter:9107/metrics || exit 1" ]
+      interval: 10s
+      retries: 5
+
   shortlink-gateway:
     image: nanachi1027/shortlink-gateway:latest
     container_name: shortlink-gateway
