--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -23,6 +23,7 @@ services:
     container_name: envoy
     ports:
       - "10000:10000"
+      - "9901:9901"
     healthcheck:
       test: [ "CMD-SHELL", "curl -f http://envoy:10000 || exit 1" ]
       interval: 10s
@@ -30,6 +31,7 @@ services:
       retries: 5
     volumes:
       - ./gateway/envoy-docker.yaml:/etc/envoy/envoy.yaml:ro
+    command: /usr/local/bin/envoy -c /etc/envoy/envoy.yaml --log-level info
     networks:
       - backend-deploy
     depends_on:
