--- a/monitor/config/prometheus-docker.yaml
+++ b/monitor/config/prometheus-docker.yaml
@@ -18,7 +18,7 @@ scrape_configs:
     static_configs:
       - targets: [ 'consul_exporter:9107' ]
 
-  - job_name: envoy
+  - job_name: 'envoy'
     static_configs:
       - targets: [ 'envoy:9901' ]
     metrics_path: /stats/prometheus
