--- a/project/src/test/resources/prometheus-test.yml
+++ b/project/src/test/resources/prometheus-test.yml
@@ -5,3 +5,6 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+  - job_name: 'mysql-exporter'
+    static_configs:
+      - targets: [ 'mysql-exporter:9104' ]
