--- a/monitor/config/prometheus.yaml
+++ b/monitor/config/prometheus.yaml
@@ -21,4 +21,9 @@ scrape_configs:
   - job_name: 'envoy'
     static_configs:
       - targets: [ 'envoy:9901' ]
-    metrics_path: /stats/prometheus
+    metrics_path: '/stats/prometheus'
+
+  - job_name: 'shortlink-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'localhost:8001' ]
